assets/css/style.css
* {
   letter-spacing: 3px; 
   font-family: 'Lucida Sans', Arial, sans-serif;
}

body {
  background-color: rgba(56, 55, 55, 0.233);
}

:root {
  --bright: rgb(49, 190, 68); 
  --dark: rgb(56, 55, 55);
}

header {
    margin: -10px -10px 0px -10px;
    background: var(--dark);
}

header h1{
    display: inline-block;
    padding: 5px 5px 5px 0;
    padding-left: 80px;
    background: var(--bright);
    color: var(--dark)
    text-align: right;
    font-size: 40px;
}

header ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  
header li {
   display: inline;
  }
  
header li a {
    color: var(--bright);
    padding: 14px 16px;
    font-weight: bold;
  }

  /* setting nav to the same line as header */
nav {
    padding-top: 40px;
    margin-right: 50px;
    float: right;
  }

 
/*postioning banner and article title*/
main {
  display: flex;
  flex-wrap: wrap;
}

article img {
    width: 100%;
    height: 100%;
  }

article h1 {
  position: relative;
  top: -120px;
  left: -50px;
  float: right;
  background-color: var(--dark);
  padding: 15px;
  margin: 20px;
  color: var(--bright);
  font-style: italic;
  font-weight: bold;
  border: 3px outset rgb(168, 158, 14); 
}

/*floating side titles of content*/
aside {
  float: left;
  padding: 0 10px 0 0;
  margin: 0 30px 0 0;
  font-size: 50px;
  border-right: 3px solid var(--dark);
}

aside .about{
margin-top: 0px;
}

aside .me {
  display: block;
  text-align: right;
}
 /*aligning selfie with about me*/
#section1 img{
  display: flex;
  flex-wrap: wrap;
  border: 4px solid var(--bright);
  height: 10%;
  width: 10%;
}  

/*setting up sections for main content*/
section {
  padding: 150px;
}

#work {
padding: 0 0 1250px 20px;
}

/*using flexbox and styling to organize projects*/
.projects {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding-left: 70px;
}

.project1 {
  border-width: 1px;
  padding: 5px;
}

.project1 img {
  opacity: .5 ;
  height: 100%;
  width: 100%;
  border: 4px solid var(--bright);
}

/*hover and opacity for faded look and normal when mouse scrolls over image*/
.project1 img:hover {
  opacity: 1;
}

.p1p {
  position: relative;
  background-color: var(--bright);
  color: black;
  top: -150px;
  left: -20px;
  float: left;
  padding: 5px 5px 5px 10px;
  margin: 20px;
  font-weight: bold;
  opacity: .5;
}

.refactor {
  font-size: 10px;
}

.smaller {
  background-image: url("../images/screentshot2.png");
  background-size: 100%;
  background-position: top;
  background-repeat: no-repeat;
  opacity: .5;
  width: 46%;
  height: 250px;
  padding: 11px;
  margin: 10px;
  border: 4px solid var(--bright);
}

.smaller:hover {
opacity: 1;
}

.work {
  position: relative;
  background-color: var(--bright);
  left: -15px;
  top: 160px;
  float: left;
  padding: 5px 5px 5px 10px;
  font-weight: bold;
}

.work3 {
  position: relative;
  background-color: var(--bright);
  left: -15px;
  top: 160px;
  float: left;
  padding: 5px 60px 5px 10px;
  font-weight: bold;
}

.title {
  font-size: 10px;
}

/* spacing and aligning links*/
.contact {
  display: flex;
}

.paragraph ul{
  display: flex;
  list-style-type: none;
  padding-top: 40px;
  color: var(--bright);
  font-weight: bold;
  font-size: 20px;
}

.paragraph ul li {
  padding: 50px;
}

/*no underline on links and allowing for color change*/
.paragraph ul li a:link, a:visited {
  text-decoration: none;
  color: var(--bright);
}

.resume p{
  display: flex;
  padding-top: 30px;
  font-weight: bold;
  font-size: 20px;
}

.resume a:link, a:visited {
  text-decoration: none;
  color: var(--bright);
}


@media screen and (max-width: 768px) {
 
}

@media screen and (max-width: 576px) {
  
}

